--- a/后台/views/admin/index.ejs
+++ b/后台/views/admin/index.ejs
@@ -145,13 +145,13 @@
                                 <a href="#nine" class="active">添加活动</a>
                             </li>
                             <li>
-                                <a href="##" class="">W3cplus</a>
+                                <a href="##" class="">添加商品</a>
                             </li>
                             <li>
-                                <a href="##" class="">慕课网</a>
+                                <a href="##" class="">删除商品</a>
                             </li>
                             <li>
-                                <a href="##" class="">Sass中国</a>
+                                <a href="##" class="">退出</a>
                             </li>
                         </ul>
                     </div>
